created LaneSpawner (preliminary)

--- a/Krossy_Road_Unreal/Config/DefaultEngine.ini
+++ b/Krossy_Road_Unreal/Config/DefaultEngine.ini
@@ -1,10 +1,12 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
+GameDefaultMap=/Game/Levels/LV_Main.LV_Main
 
 
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
+EditorStartupMap=/Game/Levels/LV_Main.LV_Main
+GlobalDefaultGameMode=/Game/GM_Krossy.GM_Krossy_C
+bUseSplitscreen=False
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
