--- a/Krossy_Road_Unreal/Config/DefaultEngine.ini
+++ b/Krossy_Road_Unreal/Config/DefaultEngine.ini
@@ -22,6 +22,13 @@ r.GenerateMeshDistanceFields=True
 r.DynamicGlobalIlluminationMethod=1
 r.ReflectionMethod=1
 r.Shadow.Virtual.Enable=1
+r.CustomDepth=0
+r.CustomDepthTemporalAAJitter=False
+r.DefaultFeature.Bloom=False
+r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.AutoExposure.Method=2
+r.DefaultFeature.MotionBlur=False
+r.MSAACount=2
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
