--- a/Krossy_Road_Unreal/Config/DefaultInput.ini
+++ b/Krossy_Road_Unreal/Config/DefaultInput.ini
@@ -82,6 +82,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="MoveBackward",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Down)
 +ActionMappings=(ActionName="MoveLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Left)
 +ActionMappings=(ActionName="MoveRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Right)
++ActionMappings=(ActionName="Restart",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
